k8s/apps/diag/whoami/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  annotations:
    io.cilium/lb-ipam-ips: 192.168.8.87
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
    - name: web
      port: 80
      targetPort: http
